# Ironforge

./: CMakeLists.txt  INFO.md  README.md  build.sh  build_run_client.sh  build_run_editor.sh  build_run_server.sh  chunk_0_0.omap  imgui.ini  run_client.sh  run_editor.sh  run_server.sh
client/: CMakeLists.txt
client/assets/models/: osrs_char.glb
client/assets/shaders/: terrain.fs  terrain.vs
client/include/: Base.hpp  Components.hpp  Systems.hpp
client/include/base/: AssetCache.hpp  CamSettings.hpp  DebugTerminal.hpp  Game.hpp  NetContext.hpp  Window.hpp  WorldContext.hpp
client/include/system/: Camera.hpp  Chat.hpp  ChatBubbles.hpp  Input.hpp  MovementInterp.hpp  Network.hpp  RenderActors.hpp  RenderWorld.hpp
client/src/: main.cpp
client/src/base/: AssetCache.cpp  DebugTerminal.cpp  Game.cpp  Window.cpp
client/src/system/: Camera.cpp  Chat.cpp  ChatBubbles.cpp  Input.cpp  MovementInterp.cpp  Network.cpp  RenderActors.cpp  RenderWorld.cpp
server/: CMakeLists.txt
server/include/: Base.hpp  Components.hpp  NetBroadcast.hpp  Systems.hpp  Util.hpp
server/include/base/: NetContext.hpp  Server.hpp  WorldContext.hpp
server/include/system/: Movement.hpp  Network.hpp  Pathfinder.hpp  Patrol.hpp  Sync.hpp  Testing.hpp
server/src/: main.cpp
server/src/base/: Server.cpp
server/src/system/: Movement.cpp  Network.cpp  Pathfinder.cpp  Patrol.cpp  Sync.cpp  Testing.cpp
shared/: CMakeLists.txt
shared/include/shared/: Base.hpp  Components.hpp  Map.hpp  MapLoader.hpp  Packets.hpp  messages.h
world_editor/: CMakeLists.txt
world_editor/include/: Editor.hpp
world_editor/src/: Editor.cpp  Export.cpp  Grid.cpp  main.cpp
